--- a/themes/next/source/css/_common/components/header/site-nav.styl
+++ b/themes/next/source/css/_common/components/header/site-nav.styl
@@ -10,7 +10,7 @@
   button {
     margin-top: 2px;
     padding: 9px 10px;
-    background: transparent;
+    background-image: url("https://ws1.sinaimg.cn/large/694830ebgy1fh3pyd05klj21kw0f2dy2.jpg");
     border: none;
   }
 }
